# Genesis

./: .gitignore  ARCHITECTURE_V2.md  EVOLUTION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_DELIVERABLES.md  README.md  README_V2.md  complex_emergence_example.json  debug_sets.py  pyproject.toml  test_v2.py  v2_output.json
examples/: compare_generations.py  complex_game_example.py  demo.py  demo_v2.py  generate_minigame.py  quick_demo.py  successful_emergence.py
seedworld/: __init__.py  __main__.py  assembler.py  atoms.py  cosmology.py  ecs.py  emergence.py  frameworks.py  generator.py  generator_v2.py  simulation.py  spec.py  validate.py  web.py
seedworld/webui/: index.html
tests/: test_generator_determinism.py  test_v2_validation.py
